refactor(test): 중복된 JPQL 업데이트 쿼리를 공통 메서드로 추출
- ThreadRepositoryTest에서 동일한 JPQL 업데이트 쿼리가 5번 반복되는 코드 중복 제거
- updateThreadCreatedAt 공통 메서드로 추출하여 코드 가독성 및 유지보수성 향상
- setUp 메서드 구조 개선 및 테스트 데이터 설정 로직 분리